# node-editor

./: .babelrc  .env.example  .gitignore  README.md  package.json  shadow-cljs.edn  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js  webpack.web.config.js
patches/: @projectstorm+react-diagrams-core+6.0.2.patch
public/: index.html
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/native/: Cargo.toml
rust/native/nodejs/: index.js
rust/native/src/: lib.rs
rust/wasm/src/: lib.rs
src/: global.d.ts  main.ts  mainApi.ts  renderer.tsx
src/client/: index.tsx
src/client/modules/: archieApi.ts
src/desktopServer/: ipc.ts
src/desktopServer/modules/: project.ts
src/modules/: fileManager.ts  plugins.ts  project.ts  transform.ts
src/modules/generators/: database.ts  transform.ts
src/modules/graph/: engine.ts  index.ts  link.ts  model.ts  port.ts
src/modules/ui/: context-menu.tsx  index.css  index.tsx  interfaces.tsx  link-custom.tsx  node-canvas.tsx  node-container.tsx  node-custom.tsx  node-editor.tsx  node-integration.tsx  node-model.ts  node-project.tsx  node-widget.tsx  router.tsx  sidebar.tsx  topbar.tsx
src/nodegui/: app.tsx  index.tsx  reducers.ts
src/nodegui/components/: Canvas.tsx  (+2 more)
static/: exampleProject.yml
static/templates/: mysql.handlebars  objection.handlebars  typescript-api-aws-lambda-multi.handlebars  typescript-api-client.handlebars  typescript-sns.handlebars
static/transformers/: database-to-objection.jq  database.jq  openapi.jq
tests/data/: test-project-config.yml  transform-data.json
(+54 files in other folders)
