[package]
name = "rust"
version = "0.1.0"
authors = ["Stephen A <stephen@creativelogic.me>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
serde = { version = "1.0.111", features = ["derive"] }
neon-serde = "0.4.0"
serde_derive = "1.0.111"
core = { path = "../core" }
